[gd_scene load_steps=19 format=3 uid="uid://c31pd0pwwwyci"]

[ext_resource type="Texture2D" uid="uid://6x75b45f4vsp" path="res://Assets/main-spritesheet.png" id="1_hphua"]
[ext_resource type="Script" path="res://Things/grace.gd" id="1_j3yya"]
[ext_resource type="Texture2D" uid="uid://d28l1yjjk2dqm" path="res://Assets/grace2.png" id="3_pqu4x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iqggd"]
radius = 38.71
height = 125.27

[sub_resource type="AtlasTexture" id="AtlasTexture_e0ham"]
atlas = ExtResource("1_hphua")
region = Rect2(33, 16, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_fov2s"]
atlas = ExtResource("1_hphua")
region = Rect2(52, 2, 9, 11)

[sub_resource type="Animation" id="Animation_sobwj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2iwmi"]
resource_name = "flip"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8xia2"]
_data = {
"RESET": SubResource("Animation_sobwj"),
"flip": SubResource("Animation_2iwmi")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_rcm0p"]
atlas = ExtResource("3_pqu4x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq5x0"]
atlas = ExtResource("3_pqu4x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgl6o"]
atlas = ExtResource("3_pqu4x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1qkh"]
atlas = ExtResource("3_pqu4x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kymb3"]
atlas = ExtResource("3_pqu4x")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2d6y"]
atlas = ExtResource("3_pqu4x")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qympa"]
atlas = ExtResource("3_pqu4x")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gvhg"]
atlas = ExtResource("3_pqu4x")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yudk0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcm0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq5x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgl6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1qkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kymb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2d6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qympa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gvhg")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="Grace" type="Node2D"]
script = ExtResource("1_j3yya")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_iqggd")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_e0ham")

[node name="InteractionLabel" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -92)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_fov2s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8xia2")
}
autoplay = "flip"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -34)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_yudk0")
autoplay = "default"
frame_progress = 0.0912734

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
